update github action

--- a/.github/workflows/publish-content.yml
+++ b/.github/workflows/publish-content.yml
@@ -2,7 +2,9 @@ name: Publish Content
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - 'preview/*'
     paths:
       - 'posts/**'
       - '*.md'
